# chikiliga_back

./: .dockerfile  .dockerignore  .gitignore  Readme.md  config.py  index.html  main.py  pyproject.toml  requirements.txt  ruff.toml
api/: api_utils.py  routes.py
api/v1/: routes.py
app/: main.py
app/api/v1/endpoints/: player.py
app/core/: config.py
app/models/: player.py
app/schemas/: player.py
app/services/: player_service.py
app/utils/: __init__.py
config/: settings.py
context/market/application/: create_market.py  delete_market.py  get_all_markets.py  get_market.py
context/market/domain/: market.py  market_repository.py
context/market/domain/value_objects/: market_id.py
context/market/infrastructure/: mongo_market_repository.py
context/market/infrastructure/services/: market_scraping_service.py
context/market/presentation/: market_controller.py
context/market/schemas/: market_create.py  market_response.py
context/player/application/: create_player.py  delete_player.py  get_all_players.py  get_player.py
context/player/domain/: player.py  player_entity.py  player_repository.py
context/player/domain/value_objects/: player_id.py
context/player/infrastructure/: mongo_player_repository.py
context/player/infrastructure/repositories/: __init__.py  mongo_player_repository.py  player_repository_impl.py
context/player/infrastructure/services/: player_scraping_service.py
context/player/presentation/: player_controller.py  player_router.py
context/player/schemas/: player_create.py  player_response.py
context/team/application/: create_team.py  delete_team.py  get_all_teams.py  get_team.py
context/team/domain/: team.py  team_repository.py
context/team/domain/value_objects/: team_id.py
context/team/infrastructure/: mongo_team_repository.py
context/team/infrastructure/services/: team_scraping_service.py
context/team/presentation/: team_controller.py
context/team/schemas/: team_create.py  team_response.py
db/: mongo_connection.py
models/: player.py
scraper/: scraper.py  scraper_funtions.py  test_data.json  utils.py
scraper/config/: config_scrapper.py
scraper/connection_pages/: connection_pages.py
scraper/contection_pages/: connection_pages.py
scraper/utils/: utils_scraper.py
services/: player_service.py
shared/: __init__.py
shared/config/: app.py  settings.py
shared/core/config/: logging.py  settings.py
shared/database/: mongo_connection.py  mongodb.py
shared/domain/: aggregate_root.py  agregate_root.py
shared/domain/value_objects/: number_value_object.py  player_id.py  string_value_object.py
